Fixing bug 147730 (bad behaviour in nav services dialogs). We're now using cocoa file pickers, so that things like mousewheel scrolling work. Patch from David Haas, cleaned up sligtly by me.